<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sec_liner_layout">

            <Spinner
                android:id="@+id/pet_name_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/pet_name_spinner_description"
                android:minWidth="48dp"
                android:minHeight="48dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/intake_calories_label"
                android:layout_marginTop="16dp"
                />


            <EditText
                android:id="@+id/target_calories_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.25"
                android:autofillHints="kcal"
                android:hint="@string/target_calories_hint"
                android:inputType="number"
                android:minWidth="70dp"
                android:minHeight="48dp"
                android:textAlignment="viewEnd"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:text="@string/kcal_label" />

        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sec_liner_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:layout_constraintBottom_toTopOf="@id/activity_main_food_list">
            <Space
                android:id="@+id/spaceStart"
                android:layout_width="50dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <!--右の余白-->
            <Space
                android:id="@+id/spaceEnd"
                android:layout_width="50dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/total_calories_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:textAlignment="viewEnd"
                android:textSize="25sp"
                android:text="@string/total_cal_text"
                app:layout_constraintStart_toEndOf="@id/spaceStart"
                app:layout_constraintEnd_toStartOf="@id/total_calories_text_view"
                app:layout_constraintTop_toTopOf="@id/sec_liner_layout"
                app:layout_constraintBottom_toTopOf="@id/left_calories_text"
                />
            <TextView
                android:id="@+id/left_calories_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:textAlignment="viewEnd"
                android:textSize="25sp"
                android:text="@string/left_cal_text"
                app:layout_constraintStart_toEndOf="@id/spaceStart"
                app:layout_constraintEnd_toStartOf="@id/left_calories_text_view"
                app:layout_constraintTop_toBottomOf="@id/total_calories_text"
                app:layout_constraintBottom_toBottomOf="@id/sec_liner_layout"
                />

            <TextView
                android:id="@+id/total_calories_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:textAlignment="viewEnd"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@id/total_calories_text"
                app:layout_constraintEnd_toStartOf="@id/total_Kcal_label"
                app:layout_constraintTop_toTopOf="@id/sec_liner_layout"
                app:layout_constraintBottom_toTopOf="@id/left_calories_text_view"
                />
            <TextView
                android:id="@+id/left_calories_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:textAlignment="viewEnd"
                android:textSize="25sp"
                app:layout_constraintStart_toEndOf="@id/left_calories_text"
                app:layout_constraintEnd_toStartOf="@id/left_kcal_label"
                app:layout_constraintTop_toBottomOf="@id/total_calories_text_view"
                app:layout_constraintBottom_toBottomOf="@id/sec_liner_layout"
                />

            <TextView
                android:id="@+id/total_Kcal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:textAlignment="viewStart"
                android:textSize="25sp"
                android:text="@string/kcal_label"
                app:layout_constraintStart_toEndOf="@id/total_calories_text_view"
                app:layout_constraintEnd_toStartOf="@id/spaceEnd"
                app:layout_constraintTop_toTopOf="@id/sec_liner_layout"
                app:layout_constraintBottom_toTopOf="@id/left_kcal_label"
                />
            <TextView
                android:id="@+id/left_kcal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="48dp"
                android:textAlignment="viewStart"
                android:textSize="25sp"
                android:text="@string/kcal_label"
                app:layout_constraintStart_toEndOf="@id/left_calories_text_view"
                app:layout_constraintEnd_toStartOf="@id/spaceEnd"
                app:layout_constraintTop_toBottomOf="@id/total_Kcal_label"
                app:layout_constraintBottom_toBottomOf="@id/sec_liner_layout"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ListView
            android:id="@+id/activity_main_food_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sec_liner_layout" />


        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="?android:attr/buttonBarButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>